--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "html5-qrcode": "^2.3.8",
+    "material-symbols": "^0.25.0",
     "next": "14.2.15",
     "qrcode": "^1.5.4",
     "react": "^18",
