--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "html5-qrcode": "^2.3.8",
-    "material-symbols": "^0.25.0",
-    "next": "14.2.15",
+    "lucide-react": "^0.479.0",
+    "next": "^15.2.1",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18"
