--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/components/QRCode.js"
+    "src/components/QRCode.js"
   ],
   "exclude": [
     "node_modules"
