--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.479.0",
+    "motion": "^12.5.0",
     "next": "^15.2.1",
     "qrcode": "^1.5.4",
     "react": "^18",
